chapters/7/snippets/busybox-limitranges-requests.yml
apiVersion: apps/v1 
kind: Deployment 
metadata: 
  labels: 
    app: test 
  name: test 
  namespace: chapter-7-limits
spec: 
  replicas: 1 
  selector: 
    matchLabels: 
      app: test 
  template: 
    metadata: 
      labels: 
        app: test 
    spec: 
      containers: 
      - image: busybox 
        name: busybox 
        command: 
        - "/bin/sh" 
        - "-c" 
        - "sleep 3600" 
        resources: 
          requests: 
            cpu: 3 
            memory: 1Gi
