chapters/7/snippets/deploy-busybox-chapter-7-projects.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-chapter-7-projects
  name: test-chapter-7-projects
  namespace: chapter-7-project-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-chapter-7-projects
  template:
    metadata:
      labels:
        app: test-chapter-7-projects
    spec:
      containers:
      - image: busybox
        name: busybox
        command:
        - "/bin/sh"
        - "-c"
        - "sleep 3600"
        securityContext:
          runAsUser: 1000700001
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop:
            - ALL
      tolerations:
      - key: node-role.kubernetes.io/infra
        operator: Exists
      securityContext:
        supplementalGroups: [1000700001]
        seLinuxOptions:
          level: s0:c26,c25
