chapters/7/snippets/deploy-busybox-out-of-range.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test-out-of-range
  name: test-out-of-range
  namespace: chapter-7-project-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-out-of-range
  template:
    metadata:
      labels:
        app: test-out-of-range
    spec:
      containers:
      - image: busybox
        name: busybox
        command:
        - "/bin/sh"
        - "-c"
        - "sleep 3600"
        securityContext:
          runAsUser: 1000710001
      tolerations:
      - key: node-role.kubernetes.io/infra
        operator: Exists
      securityContext:
        supplementalGroups: [1000710001]
        seLinuxOptions:
          level: s0:c26,c25
