chapters/7/snippets/deploy-busybox.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: test
  name: test
  namespace: chapter-7-project-1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - image: busybox
        name: busybox
        command:
        - "/bin/sh"
        - "-c"
        - "sleep 3600"
