chapters/7/snippets/deploy-nginx-netpol-1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netpol-1
  name: netpol-1
  namespace: chapter-7-netpol-1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netpol-1
  template:
    metadata:
      labels:
        app: netpol-1
    spec:
      containers:
      - image: nginx
        name: nginx
