chapters/7/snippets/deploy-nginx-netpol-2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: netpol-2
  name: netpol-2
  namespace: chapter-7-netpol-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netpol-2
  template:
    metadata:
      labels:
        app: netpol-2
    spec:
      containers:
      - image: nginx
        name: nginx
