chapters/7/snippets/pod-httpd.yml
apiVersion: v1
kind: Pod
metadata:
  name: httpd
spec:
  containers:
    - name: httpd
      image: quay.io/centos7/httpd-24-centos7:centos7
  volumes:
    - name: local-block-volume
      persistentVolumeClaim:
        claimName: local-block-pvc
