chapters/7/snippets/sc-hostpath-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: sc-hostpath-pod
spec:
  containers:
    - name: hostpath-pod
      image: quay.io/centos7/httpd-24-centos7:centos7
      volumeMounts:
        - name: shared-data
          mountPath: /mnt
      securityContext:
        privileged: true
  volumes:
    - name: shared-data
      persistentVolumeClaim:
        claimName: sc-hostpath-pv
